--- a/SquaresNStuff/Base.lproj/Main.storyboard
+++ b/SquaresNStuff/Base.lproj/Main.storyboard
@@ -1,8 +1,14 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,12 +23,49 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SpaceShip" translatesAutoresizingMaskIntoConstraints="NO" id="6ZB-MB-Vvh">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="167"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AlbertEinstein" translatesAutoresizingMaskIntoConstraints="NO" id="cq8-kf-P0N">
+                                <rect key="frame" x="104" y="117" width="167" height="167"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="cq8-kf-P0N" secondAttribute="height" multiplier="1:1" id="mmO-Hz-G9n"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Albert Einstein" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7kD-x8-1vR">
+                                <rect key="frame" x="91" y="292" width="193" height="21"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <color key="highlightedColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="shadowColor" red="0.0" green="0.52631317960000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <size key="shadowOffset" width="2" height="1"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="7kD-x8-1vR" firstAttribute="centerX" secondItem="cq8-kf-P0N" secondAttribute="centerX" id="5WG-WU-TjN"/>
+                            <constraint firstItem="6ZB-MB-Vvh" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.25" id="KHg-fl-Nbc"/>
+                            <constraint firstItem="7kD-x8-1vR" firstAttribute="top" secondItem="cq8-kf-P0N" secondAttribute="bottom" constant="8" id="YY5-6J-few"/>
+                            <constraint firstItem="6ZB-MB-Vvh" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="di9-k6-g1W"/>
+                            <constraint firstItem="6ZB-MB-Vvh" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="eNz-Ta-Xwh"/>
+                            <constraint firstItem="cq8-kf-P0N" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gxc-9i-0MW"/>
+                            <constraint firstItem="cq8-kf-P0N" firstAttribute="height" secondItem="6ZB-MB-Vvh" secondAttribute="height" id="hMJ-Pq-ZcO"/>
+                            <constraint firstItem="cq8-kf-P0N" firstAttribute="top" secondItem="6ZB-MB-Vvh" secondAttribute="bottom" multiplier="0.7" id="keh-cX-rxr"/>
+                            <constraint firstItem="6ZB-MB-Vvh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="lFv-P1-cCZ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="profileImageView" destination="cq8-kf-P0N" id="LT3-j8-vaz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="399.19999999999999" y="388.15592203898052"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="AlbertEinstein" width="300" height="320"/>
+        <image name="SpaceShip" width="900" height="563"/>
+    </resources>
 </document>
